// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Staking > force apply validator commission > force apply min commission events 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 3500)",
          "refTime": "(rounded 260000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > set minimum validator commission > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 210000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > set staking configs > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 720000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > set staking configs > set staking configs event 1`] = `
{
  "event": {
    "data": [
      {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1500)",
          "refTime": "(rounded 260000000)",
        },
      },
    ],
    "index": "0x0000",
  },
  "phase": {
    "applyExtrinsic": 0,
  },
  "topics": [],
}
`;

exports[`Polkadot Staking > staking lifecycle > chill events 1`] = `
[
  {
    "data": {
      "stash": "15oDEzh2DmP3ouawCQMXc4RLiZA9Af7ZkTu3QygmbfoBUa8o",
    },
    "method": "Chilled",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > events when attempting to nominate a blocked validator 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x14000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 14000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > kick events 1`] = `
[
  {
    "data": {
      "nominator": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "stash": "15oDEzh2DmP3ouawCQMXc4RLiZA9Af7ZkTu3QygmbfoBUa8o",
    },
    "method": "Kicked",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > nominate events 1`] = `[]`;

exports[`Polkadot Staking > staking lifecycle > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > nominator bond extra events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > unbond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "15oDEzh2DmP3ouawCQMXc4RLiZA9Af7ZkTu3QygmbfoBUa8o",
    },
    "method": "Unbonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validate (blocked) events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": true,
        "commission": "0.00%",
      },
      "stash": "15oDEzh2DmP3ouawCQMXc4RLiZA9Af7ZkTu3QygmbfoBUa8o",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 0 bond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "15oDEzh2DmP3ouawCQMXc4RLiZA9Af7ZkTu3QygmbfoBUa8o",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 0 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "15oDEzh2DmP3ouawCQMXc4RLiZA9Af7ZkTu3QygmbfoBUa8o",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 1 bond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "12YePC3TH3ZuzxB9E1QTKpNKXSyrcsSbNjqiCpBrQFfw2Fjw",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 1 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "12YePC3TH3ZuzxB9E1QTKpNKXSyrcsSbNjqiCpBrQFfw2Fjw",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 2 bond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "13LUDokDFBn3u1ntu8nZwtYjEhvrnY4bEvQzaTFDkBtM3oD5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > staking lifecycle > validator 2 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "13LUDokDFBn3u1ntu8nZwtYjEhvrnY4bEvQzaTFDkBtM3oD5",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > test fast unstake > nominate events 1`] = `[]`;

exports[`Polkadot Staking > test fast unstake > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > test fast unstake > register fast unstake events 1`] = `[]`;

exports[`Polkadot Staking > trying to become a validator with no bonded funds fails > events when attempting to validate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 4600)",
          "refTime": "(rounded 830000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > trying to nominate with no bonded funds fails > events when attempting to nominate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 8800)",
          "refTime": "(rounded 970000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;
